--- a/build.gradle
+++ b/build.gradle
@@ -48,4 +48,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile project(':tvconnection')
 }
