--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile project(':tvconnection')
     compile 'com.android.support:support-v4:23.0.1'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
 }
